2008-12-28  Helmut Eller  <heller@common-lisp.net>

	Recent CCLs support much better source location recording.
	Let's use the new features in SLIME.

	* swank-openmcl.lisp (function-source-location): Use
	ccl:function-source-note.
	(pc-source-location): New function, based on
	ccl:find-source-note-at-pc.
	(frame-source-location-for-emacs): Use it.

2008-12-27  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Move slime-lisp-package and
	slime-lisp-package-prompt-string to slime-repl.el

	* swank.lisp (create-repl): Return initial package and prompt.

2008-12-25  Helmut Eller  <heller@common-lisp.net>

	Don't restore window configs in sldb.
	That doesn't work in the native repl, because output
	may have moved point.

	* slime.el (sldb-setup, sldb-exit): Use temp buffer code.
	(slime-display-popup-buffer): Don't overwrite existing
	variables.
	(slime-close-popup-window): Factored out from
	slime-popup-buffer-quit.
	(slime-save-local-variables): New macro.
	(sldb-maybe-kill-buffer, sldb-saved-window-configuration): Deleted.

2008-12-23  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (connection.env): New slot. To hold dynamic variable
	bindings for this connection.
	(with-io-redirection): Use it.
	(create-repl): New function.  Currently only redirects IO for the
	connection.  Could potentially be used to create multiple
	listeners, each with a set of streams and corresponding buffers.
	(*redirect-io*, maybe-call-with-io-redirection)
	(call-with-redirected-io): Deleted.

2008-12-23  Helmut Eller  <heller@common-lisp.net>

	Move most of the REPL mode to contrib.
	Disable some commands that depend on the
	existence of a REPL buffer.

2008-12-23  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-set-connection-info): Don't create a repl
	buffer.
	(slime-start-lisp): Bind process-connection-type to nil to avoid
	problems witht CLISPs readline code.

	* swank.lisp (read-non-blocking, make-repl-input-stream)
	(simple-repl): New functions.